--- a/css/index.css
+++ b/css/index.css
@@ -60,9 +60,6 @@ table {
 html, body {
     height: 100%;
 	font-family: 'Titillium Web', sans-serif;
-	margin-right: 20px;
-	margin-left: 20px;
-    padding: 25px 150px 0 150px;
 }
 
 h1, h2, h3, h4, h5 {
@@ -75,35 +72,33 @@ h1, h2, h3, h4, h5 {
 
 /************* HEADER *************/
 
-.container {
-	width: 900px;
-	margin: 10px auto 20px 0;
-}
 
 header {
+	width: 100%;
 	display: flex;
+	justify-content: center;
 }
 
 nav {
-	display: flex;
-	justify-content: flex-start;
-	align-items: center;	
-	width: 100%;
-	font-weight: bolder;
-    font-size: 18px;
+	width: 60%;
+    display: flex;
+    font-weight: bolder;
+    font-size: 20px;
 }
 
 nav a {
-	padding: 25px;
+	padding: 45px;
 	color: grey;
 	text-decoration: none;
 }
 
+.logo {
+	width: 30%;
+	object-fit: scale-down;
+}
+
 .header {
-	display: flex;
-    flex-direction: column;
-    justify-content: center;
-	align-items: center;
+	text-align: center;
 }
 
 /************* HERO *************/
@@ -112,14 +107,6 @@ nav a {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	margin-bottom: 45px;
-}
-
-.logo {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	object-fit: scale-down;
 }
 
 h1 {
@@ -128,9 +115,6 @@ h1 {
 }
 
 .btn {
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	width: 70%;
     font-size: 20px;
 }
@@ -154,6 +138,7 @@ h1 {
 .break {
 	border-top: 2px solid #000;
 	margin: 40px auto;
+	width: 100%;
 }
 
 /************* SECTION FIRST *************/
@@ -175,7 +160,8 @@ h1 {
 
 .middle-img {
 	width: 100%;
-	margin: 40px auto;
+	margin: 20px auto;
+    display: flex;
 }
 
 /************* ROW *************/
@@ -186,22 +172,23 @@ h1 {
 }
 
 .section-services {
-	width: 30%;
+	width: 26%;
 	padding: 15px;
 }
 
 .section-product {
-	width: 30%;
+	width: 26%;
 	padding: 15px;
 }
 
 .section-vision {
-	width: 30%;
+	width: 26%;
 	padding: 15px;
 }
 
 .section-contact {
 	padding: 15px;
+	margin-left: 4%;
 	line-height: 1;
 }
 
@@ -217,4 +204,139 @@ h1 {
 footer {
 	text-align: center;
 	margin: 60px auto;
+}
+
+
+/************* MEDIA QUERIES *************/
+
+@media (max-width: 521px) {
+	body {
+		margin-left: 5%;
+		margin-right: 1%;
+	}
+
+	header {
+		justify-content: space-evenly;
+		margin-bottom: 20px;
+	}
+
+	nav {
+		width: 100%;
+		font-size: 10px;
+	}
+
+	nav a {
+		padding: 11px;
+    	font-size: 12px;
+	}
+	
+	.header-image {
+		width: 250px;
+		height: auto;
+	}
+  
+	h1 {
+		font-size: 45px;
+	}
+
+	.btn {
+		font-size: 10px;
+		border: 1px solid black;
+		background-color: white;
+	}
+
+	.section-services,
+	.section-vision,
+	.section-product  {
+		padding: 0;
+	}
+}
+
+@media (max-width: 313px) {
+	header {
+		flex-direction: column-reverse;
+		align-items: center;
+		margin: 20px auto;
+	}
+	.logo {
+		width: 40%;
+	}
+
+	h1 {
+		font-size: 35px;
+	}
+
+	.btn {
+		width: 50%;
+	}
+
+	nav a {
+		padding: 6px;
+    	font-size: 12px;
+	}
+
+	.header-image {
+		display: none;
+	}
+
+	.hero-text {
+		width: 100%;
+	}
+	
+	.hero-image {
+		width: 0;
+	}
+
+	.section-first,
+	.section-second,
+	.section-contact,
+	footer {
+		font-size: 11px;
+	}
+}
+
+@media (max-width: 233px) {
+	nav {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	a {
+		width: 80%;
+		text-align: center;
+		border-bottom: 1px solid grey;
+	}
+
+	a:first-child {
+		border-top: 1px solid grey;
+		margin-top: 15px;
+	}
+
+	.section-first,
+	.section-second {
+		display: block;
+	}
+
+	.section-features,
+	.section-about,
+	.section-services,
+	.section-product,
+	.section-vision  {
+		width: 100%;
+	}
+
+	h3 {
+		margin-top: 20px;
+		margin-bottom: 10px;
+	}
+
+	.section-contact {
+		padding: 0;
+		margin: 0;
+	}
+
+	footer {
+		margin: 30px auto;
+	}
 }
